# GEMBA-structured-output

./: pyproject.toml
gemba/: __init__.py  cli.py  gemba_mqm_utils.py  gpt_api.py  prompt.py  utils.py
tests/: test_gemba_mqm_utils.py  test_gpt_api.py  test_prompt.py
