[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemba"
version = "0.1.0"
description = "GEMBA translation evaluation utilities and CLI."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }
authors = [
  { name = "Microsoft Translator team" }
]
dependencies = [
  "openai>=1.0.0",
  "pandas",
  "termcolor",
  "pexpect",
  "scipy",
  "ipdb",
  "absl-py",
  "diskcache",
  "tqdm",
]

[project.optional-dependencies]
eval = ["mt-metrics-eval @ git+https://github.com/google-research/mt-metrics-eval.git"]

[project.scripts]
gemba = "gemba.cli:run"

[tool.uv]
# Restrict resolution to Linux to avoid failures from mt-metrics-eval
# (not on PyPI) when resolving for Windows/macOS
environments = ["sys_platform == 'linux'"]

[tool.setuptools.packages.find]
include = ["gemba"]

